// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatIntegrationPreview should display quickReplies 1`] = `
<div
  className="preview"
>
  <div
    className="titlebar"
  />
  <div
    className="dialog"
  >
    <div
      className="header"
      style={
        Object {
          "backgroundColor": "#123456",
        }
      }
    >
      <div
        className="agents"
      >
        <div
          className="agent first"
          style={
            Object {
              "borderColor": "#123456",
            }
          }
        >
          <i
            className="material-icons"
          >
            person
          </i>
          <div
            className="onlineMarker"
          />
        </div>
        <div
          className="agent middle"
          style={
            Object {
              "borderColor": "#123456",
            }
          }
        >
          <i
            className="material-icons"
          >
            person
          </i>
          <div
            className="onlineMarker"
          />
        </div>
        <div
          className="agent last"
          style={
            Object {
              "borderColor": "#123456",
            }
          }
        >
          <i
            className="material-icons"
          >
            person
          </i>
          <div
            className="onlineMarker"
          />
        </div>
      </div>
      <div
        className="details"
      >
        <div
          className="appName"
        >
          My little chat integration
        </div>
        <div
          className="introductionText"
        >
          intro
        </div>
      </div>
    </div>
    <div
      className="content quick-replies-content"
    >
      <div
        className="quick-replies-wrapper"
      >
        <button
          className="btn btn-reply-action reply"
          key="foo-0"
          style={
            Object {
              "borderColor": "#123456",
              "color": "#123456",
            }
          }
        >
          foo
        </button>
        <button
          className="btn btn-reply-action reply"
          key="bar-1"
          style={
            Object {
              "borderColor": "#123456",
              "color": "#123456",
            }
          }
        >
          bar
        </button>
      </div>
    </div>
    <div
      className="poweredby"
    >
      Powered by Gorgias
    </div>
    <div
      className="footer"
    >
      <div
        className="placeholder"
      >
        input
      </div>
      <i
        className="icon camera"
      />
    </div>
  </div>
  <div
    className="button"
    style={
      Object {
        "backgroundColor": "#123456",
      }
    }
  >
    <div
      className="iconWrapper"
    >
      <i
        className="icon"
      />
      <div
        className="shadow"
      />
    </div>
  </div>
</div>
`;

exports[`ChatIntegrationPreview should display the offline status because chat is offline 1`] = `
<div
  className="preview"
>
  <div
    className="titlebar"
  />
  <div
    className="dialog"
  >
    <div
      className="header"
      style={
        Object {
          "backgroundColor": "#A1A9B6",
        }
      }
    >
      <div
        className="agents"
      >
        <div
          className="agent first"
          style={
            Object {
              "borderColor": "#A1A9B6",
            }
          }
        >
          <i
            className="material-icons"
          >
            person
          </i>
          <div
            className="offlineMarker"
          />
        </div>
        <div
          className="agent middle"
          style={
            Object {
              "borderColor": "#A1A9B6",
            }
          }
        >
          <i
            className="material-icons"
          >
            person
          </i>
          <div
            className="offlineMarker"
          />
        </div>
        <div
          className="agent last"
          style={
            Object {
              "borderColor": "#A1A9B6",
            }
          }
        >
          <i
            className="material-icons"
          >
            person
          </i>
          <div
            className="offlineMarker"
          />
        </div>
      </div>
      <div
        className="details"
      >
        <div
          className="appName"
        >
          My little chat integration
        </div>
        <div
          className="introductionText"
        >
           
        </div>
        <div
          className="business-hours-back-badge"
        >
          Back tomorrow
        </div>
      </div>
    </div>
    <div
      className="content"
    >
      <div
        className="bubble primary firstMessageOfAppUser"
        style={
          Object {
            "backgroundColor": "#456789",
          }
        }
      >
        Hey there
      </div>
      <div
        className="bubble primary lastMessage"
        style={
          Object {
            "backgroundColor": "#456789",
          }
        }
      >
        I'm wondering about the status of my order, I've been waiting for a while now and it has not arrived yet.
      </div>
      <div
        className="user"
      >
        Charles
      </div>
      <div
        className="bubble firstMessageOfAppMaker"
      >
        Sure, what's your email / order number?
      </div>
    </div>
    <div
      className="poweredby"
    >
      Powered by Gorgias
    </div>
    <div
      className="footer"
    >
      <div
        className="placeholder"
      >
        input
      </div>
      <i
        className="icon camera"
      />
    </div>
  </div>
  <div
    className="button"
    style={
      Object {
        "backgroundColor": "#123456",
      }
    }
  >
    <div
      className="iconWrapper"
    >
      <i
        className="icon"
      />
      <div
        className="shadow"
      />
    </div>
  </div>
</div>
`;

exports[`ChatIntegrationPreview should display the online status because chat is online 1`] = `
<div
  className="preview"
>
  <div
    className="titlebar"
  />
  <div
    className="dialog"
  >
    <div
      className="header"
      style={
        Object {
          "backgroundColor": "#123456",
        }
      }
    >
      <div
        className="agents"
      >
        <div
          className="agent first"
          style={
            Object {
              "borderColor": "#123456",
            }
          }
        >
          <i
            className="material-icons"
          >
            person
          </i>
          <div
            className="onlineMarker"
          />
        </div>
        <div
          className="agent middle"
          style={
            Object {
              "borderColor": "#123456",
            }
          }
        >
          <i
            className="material-icons"
          >
            person
          </i>
          <div
            className="onlineMarker"
          />
        </div>
        <div
          className="agent last"
          style={
            Object {
              "borderColor": "#123456",
            }
          }
        >
          <i
            className="material-icons"
          >
            person
          </i>
          <div
            className="onlineMarker"
          />
        </div>
      </div>
      <div
        className="details"
      >
        <div
          className="appName"
        >
          My little chat integration
        </div>
        <div
          className="introductionText"
        >
          intro
        </div>
      </div>
    </div>
    <div
      className="content"
    >
      <div
        className="bubble primary firstMessageOfAppUser"
        style={
          Object {
            "backgroundColor": "#456789",
          }
        }
      >
        Hey there
      </div>
      <div
        className="bubble primary lastMessage"
        style={
          Object {
            "backgroundColor": "#456789",
          }
        }
      >
        I'm wondering about the status of my order, I've been waiting for a while now and it has not arrived yet.
      </div>
      <div
        className="user"
      >
        Charles
      </div>
      <div
        className="bubble firstMessageOfAppMaker"
      >
        Sure, what's your email / order number?
      </div>
    </div>
    <div
      className="poweredby"
    >
      Powered by Gorgias
    </div>
    <div
      className="footer"
    >
      <div
        className="placeholder"
      >
        input
      </div>
      <i
        className="icon camera"
      />
    </div>
  </div>
  <div
    className="button"
    style={
      Object {
        "backgroundColor": "#123456",
      }
    }
  >
    <div
      className="iconWrapper"
    >
      <i
        className="icon"
      />
      <div
        className="shadow"
      />
    </div>
  </div>
</div>
`;
